--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,15 +7,19 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th>Date création</th>
+      <th>Date modification</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @articles.each do |article| %>
-      <tr>
+      <tr align="center">
         <td><%= article.title %></td>
         <td><%= article.description %></td>
+        <td><%= article.created_at.to_date %></td>
+        <td><%= article.updated_at.to_date %></td>
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
         <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,4 +30,6 @@
 
 <br>
 
-<%= link_to 'New Article', new_article_path %>
+<%= link_to 'New Article', new_article_path %> <br/><br/>
+<%= link_to 'Go back to home pages', root_path %><br/><br/>
+<%= link_to 'Go back to home pages 2', me_path %>
