Working on home page and css

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
 
 <table>
   <thead>
-    <tr>
+    <tr align="center">
       <th>Title</th>
       <th>Description</th>
       <th>Date création</th>
@@ -31,6 +31,3 @@
 
 <br>
 
-<%= link_to 'New Article', new_article_path %> <br/><br/>
-<%= link_to 'Go back to home pages', root_path %><br/><br/>
-<%= link_to 'Go back to home pages 2', me_path %>
