--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,38 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo {
+  float:left;
+  font-size: 1.7em;
+  color:blue;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+#logo:hover{
+  color:#ffff00;
+  text-decoration: none;
+}
+
+.v :visited{
+  color: #feff12 !important;
+}
+
+.center{
+  text-align: center;
+}
+
+.jumbotron{
+  background-image: asset-url('bg.png');
+  background-size:cover;
+  height: 550px;
+}
+
+.jumbotron h1{
+  color:#fff;
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: -1em;
+}
