--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome#home</h1>
-<p>Find me in app/views/welcome/home.html.erb</p>
+<div class="jumbotron center">
+  <h1>Welcome to Ymood !</h1>
 
-<%= link_to 'About page', welcome_about_path %> <br/><br/>
-<%= link_to 'Article page', articles_path %> <br/><br/>
+  <%= link_to 'Sign up now', "#", class: "btn btn-info btn-lg v" %>
+</div>
