--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: article, local: true) do |form| %>
+<!-- :html => {class: "form-horizontal", role: "form"} -->
+<%= form_with(model: article, local: true, class: "form-horizontal") do |form| %>
   <% if article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -11,17 +12,27 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+  <div class='row'>
+    <div class="col-xs-12">
+      <div class='form-group'>
+        <div class="col-sm-8">
+            <%= form.label :title, class: 'col-sm-1 control-label' %>
+            <%= form.text_field :title, class:'form-control', placeholder:"Title of the article" %>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
+      <div class="form-group">
+        <div class="col-sm-8">
+            <%= form.label :description, class: "col-sm-1 control-label" %>
+            <%= form.text_area :description, class:'form-control',placeholder:"body of your description", rows:5 %>
+        </div>
+      </div>
 
-  <div class="actions">
-    <%= form.submit %>
+      <div class="form-group">
+        <div class="col-sm-offset-6 col-sm-8">
+            <%= form.submit class:'btn btn-success btn-xg'%>
+        </div>
+      </div>
+    </div>
   </div>
 <% end %>
