--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', article: @article %>
 
-<%= link_to 'Back', articles_path %>
+<div class="col-xs-4 col-xs-offset-6 ">
+  <%= link_to 'Cancel and go back', articles_path, class: "btn btn-warning" %>
+</div>
