--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,17 +1,6 @@
+<%= render "shared/errors", obj: @article %>
 <!-- :html => {class: "form-horizontal", role: "form"} -->
 <%= form_with(model: article, local: true, class: "form-horizontal") do |form| %>
-  <% if article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
-
-      <ul>
-      <% article.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
   <div class='row'>
     <div class="col-xs-12">
       <div class='form-group'>
