--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,32 +1,22 @@
 <%= render "shared/flash" %>
 
-<h1>Articles</h1>
+    <h1 class=" col-xs-offset-2">Articles</h1>
 
-<table>
-  <thead>
-    <tr align="center">
-      <th>Title</th>
-      <th>Description</th>
-      <th>Date création</th>
-      <th>Date modification</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
     <% @articles.each do |article| %>
-      <tr align="center">
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= article.created_at.to_date %></td>
-        <td><%= article.updated_at.to_date %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete , data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+        <div class="row col-xs-12">
+          <div class="well col-xs-4 col-xs-offset-2">
+            <strong>Titre:</strong>
+            <%= article.title %>
+          </div>
+          <div class="well col-xs-8 col-xs-offset-2">
+            <strong>Description:</strong> <hr />
+            <%= simple_format(article.description) %>
+            <%= link_to 'Show', article, class: "btn btn-warning btn-xs" %>
+            <%= link_to 'Edit', edit_article_path(article), class: "btn btn-info btn-xs" %>
+            <%= link_to 'Delete', article, method: :delete ,class: "btn btn-danger btn-xs", data: { confirm: "Are you sure? to delete #{article.title}?" } %>
+          </div>
+        </div>
     <% end %>
-  </tbody>
-</table>
 
 <br>
 
