--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,15 @@
-<p id="notice"><%= notice %></p>
+<h2 align="center">
+  <strong>Title:</strong> <%= @article.title %>
+</h2>
 
+<div class="well col-xs-8 col-xs-offset-2">
+  <strong>Description:</strong> <hr />
+  <%= simple_format(@article.description) %>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+<div class="col-xs-8 col-xs-offset-2">
+  <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-info btn-sm" %> |
+  <%= link_to 'Delete article', @article, method: :delete ,class: "btn btn-danger btn-sm", data: { confirm: "Are you sure? to delete #{@article.title}?" } %> |
+  <%= link_to 'Cancel and go back', articles_path, class: "btn btn-warning btn-sm" %>
+</div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @article.description %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
