Validate to master local

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 <%= render "shared/flash"%>
-<%= render "shared/errors"%>
+<%= render "shared/errors", obj: @article%>
 <h1>New Article</h1>
 
 <%= render 'form', article: @article %>
