--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,6 +17,8 @@
       <ul class="nav navbar-nav">
         <li><%= link_to 'Articles', articles_path  %></li>
         <li><%= link_to 'New article', new_article_path  %></li>
+        <li><%= link_to 'Users', users_path  %></li>
+        <li><%= link_to 'New user', new_user_path  %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'About', welcome_about_path  %></li>
