--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Article</h1>
 <%= render "shared/flash"%>
-<%= render "shared/errors"%>
+<%= render "shared/errors", obj: @article%>
 <%= render 'form', article: @article %>
 <br /><br /><br />
 <div class="col-xs-4 col-xs-offset-6 ">
